# ChangeLog for media-plugins/gimp-normalmap
# Copyright 1999-2018 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2018; AzP <peterasplund@gentoo.se> gimp-normalmap-1.2.2-r1.ebuild,
  metadata.xml:
  Clean up all complaints by repoman

  22 Sep 2013; Peter Asplund <peterasplund@gentoo.se> gimp-normalmap-1.2.2-r2.ebuild:
  Add -lm to linker libraries

  05 May 2012; Mike Gilbert <floppym@gentoo.org> gimp-normalmap-1.2.2-r1.ebuild:
  Use pkgconfig virtual.

  08 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
  -gimp-normalmap-1.2.2.ebuild, +gimp-normalmap-1.2.2-r1.ebuild:
  Upstream regenerated the tarball, update the Manifest. Minimize sed usage
  in favor of emake arguments.

  26 Apr 2010; Denilson (CrazyTB) <denilsonsa@gmail.com>
  +gimp-normalmap-1.2.2.ebuild, +metadata.xml:
  New package, wrt bug 187052, many thanks to Dennis Schridde, binki,
  chithead, Tommy[D]