@@ -1,4 +1,6 @@
 DIST gimp-normalmap-1.2.2.tar.bz2 143698 SHA256 e0029552dd0f25396de68ed7009e65da2d6ac3913903bd2b67767ffe69a0674e SHA512 00b7ab8746d8c2979009a80f540fdfabfe19447d11e2fc2aab6721975f53101284f83ad514d40d72675845dcf4c55a1faae65119843b71f9ae02d3619df52d44 WHIRLPOOL 7d68dd6eaeae9371023f739e0f0183415287a229888b85bede683defc2a06926aebf12a96e2dc154a2bf2e19b5e4a88eda377ed5caa2b70db771862c7626c17a
+DIST gimp-normalmap-1.2.3.tar.bz2 144763 SHA256 1787716459d836cf61f0ea2aa441df1723339edd303d6f1c0ae2c0a483fbd593 SHA512 08320f0da06b9c11f3a57e8d4fc680699c90f6d17f3becf5adc924577117521d9311694aeafc15161e799d117a6c16edf4fad3691468ee5c43553093fc008ae6 WHIRLPOOL d1213eca0c308524c7537481381977af272cebad51e89bec7bf861127667c0804e7c3210213b06386b1562f566ce01122f2208060b4c35991fa8ed667df3e648
 EBUILD gimp-normalmap-1.2.2-r1.ebuild 984 SHA256 257ee2a42717f4b37f8a27157b0f8ef5d72939552792b9efae3682a01db5cef7 SHA512 bb8816f4f2596549f20f2da2ec78017b3909e12110885c6787ea45c17441c94c4828d2cc0319cd11b8702dc15acc09093ceac747610a6ac469d6245c562e30d9 WHIRLPOOL 716ee41e552986e23ca6e5b8989f8cc700fccbdde0bdf51a29af15efa4ac3c5cec27a99925b27cd10815ad691c09d171c300266e6e82c9f1c374a05d457c0e02
-MISC ChangeLog 920 SHA256 738a65092e38e1fa0b69e42663ef5c533e08f74eef5e71b3d25427fd3f7c6977 SHA512 b4992eaf7b0ff0553152f5126c8cf228a82519b7c457d72c94d30a5aff1c8d37105762ff837627c76cd0a42b130904ddf3ace72e5fe6c45bb395527b909cbff4 WHIRLPOOL 1003e95eab6611ab31ebe416ea371d9274117003f63cfb76880c28bb85bc09db6cb892ad0375972dcca3c0cf6ddf31a39b495dc22133cf9225f5445cc764792e
+EBUILD gimp-normalmap-1.2.3.ebuild 1042 SHA256 3582ceb6edfb0deee4ab7726d4f30e92699b4737225ddde7a4228b765d4a3a9e SHA512 713484d61f37c0f2260c1ecb51300916a19807f5ce59aa8d3727a6c82192595dd8faf29401f52ce389b6b5fa33c8fc5d6bacd38062335de296e2aa8155d50262 WHIRLPOOL 96040ed2586f63571f2dfa3e26eed599d34853f800bbda891158b70e6cb9455b11db970cbc76f14a12cdb79416a3fd130833ee3e78f788a3b91293c95773973f
+MISC ChangeLog 1140 SHA256 770bbb5e99d3ca96a2a3514909df6d46f0fef9025d5564d568dbe98c362c4ff3 SHA512 62662a254a66d041c7ae3fe217735edf8dc68d0d0ee202977922faf86a8508f7c111769133f9a686ebbf4faa5b3df9e1dafd374305143de9f1a3b8d956bea470 WHIRLPOOL 05a4909c1e9f1c41b649ab9eaa68a0b88cc3648065747989a8245395b5551bfc90fc52aa3af2de5905cfc07d3f29f733141b089d5069650bcdf97218ea36bcff
 MISC metadata.xml 277 SHA256 9addfc68fe54cd9717663528a07b8fb5fcd1b8df1b70a4b1c890313a5b1cdc96 SHA512 bf0c69e2d67b57d59933c5ce3c8fdd95d498061f8cf1308ac3f1e4203044b6cae83b45cc67e1ed7ecf76f24fee24fd8a1c1857f77fe19d211c9b74b3910221b3 WHIRLPOOL 8ece880834f36fe0b93bf3e68df631b1b1fb82f120b21c2683d2b615b14459e396385764b3075adf415e0f06ae7948014232cde6825a8952435220428d981c8d
